# evai-cli

./: .cursorrules  .gitignore  CLAUDE.md  README.md  bak.servers_config.json  evai.llm  pyproject.toml  repomix-output.txt  repomix.config.json  requirements.txt  server_config.json  servers_config.json  test_deploy_artifact.py  test_tool_registration.py
.cursor/rules/: database.mdc  tests.mdc
docs/: ARCHITECTURE.md  evai_client_library.md  evai_spec.md  llm_interaction_spec.md  tool_positional_args_todo.md  type_consistency_check.md
docs-archive/: cli_refactor_todo.md  click_migration.md  command_add_todo.md  command_execution_todo.md  command_refactor_todo.md  command_storage_todo.md  deploy_artifact_todo.md  refactor_mcp_todo.md  tool_storage_todo.md
evai/: __init__.py  cli.py  command_storage.py  llm.py  llm_client.py  llm_interaction.py  mcp_server.py  mcp_tools.py  migrate_commands_to_tools.py  tool_storage.py
evai/artifacts/: CustomButton.tsx  SimpleCalculator.tsx  fancy-dashboard-card.tsx  uv_dependency_installer.tsx
evai/cli/: cli.py  mcp_server.py  user_commands.py
evai/cli/commands/: cmdllmadd.py  commands.py  llm.py  llmadd.py  tool.py  tools.py
evai/commands/: __init__.py  llmadd.py
evai/docs/: cli_refactor_todo.md  cmd_plan.md  commands_todo.md  implementation_editing_todo.md  llm_interaction_todo.md  llm_lib_api.md  llm_lib_todo.md  llm_refactoring_todo.md  llm_stop_reasons_todo.md  llm_tool_use_todo.md  llmadd_todo.md  mcp_integration_todo.md  openai_quickstart.md  prompt_plan.md  refactor_summary.md  refactor_todo.md  scaffolding_todo.md  todo.md  tool_positional_args_todo.md  tools_show_todo.md
evai/evai_llm_lib/: api.py  config.py  errors.py  session.py
evai/evai_llm_lib/backends/: __init__.py  anthropic.py  base.py  local.py  mcp.py
evai/mcp/: client_tools.py  mcp_server.py  mcp_tools.py  prompts.py  resources.py  server.py  tools.py  unused_tools.py
evai/templates/: sample_command.py  sample_command.yaml  sample_group.yaml  sample_subcommand.yaml  sample_tool.py  sample_tool.yaml
evai/tests/evai_llm_lib/: conftest.py  test_api.py  test_backends_anthropic.py  test_backends_local.py  test_integration.py  test_session.py
evai/tools/math/subtract/: subtract.py  tool.yaml
evai_cli/: __init__.py  llm.py  llm_client.py
evai_cli/cli/: __init__.py  cli.py  user_commands.py
evai_cli/cli/commands/: __init__.py  llm.py  llmadd.py  tools.py
evai_cli/mcp/: prompts.py  resources.py  server.py  tools.py  unused_tools.py
tests/: __init__.py  test_add_command.py  test_cli.py  test_command_add.py  test_edit_implementation.py  test_edit_metadata.py  test_firstclass_commands.py  test_list_and_run.py  test_llm.py  test_llm_command.py  test_llm_features.py  test_mcp_exposure.py  test_metadata.py  test_type_consistency.py  test_user_commands.py
tests/cli/commands/: test_llm.py
tests/test_tools/: test_cli_integration.py  test_positional_args.py
~/.evai/commands/add/: add.py  add.yaml
~/.evai/commands/subtract/: subtract.py  subtract.yaml
~/.evai/tools/deploy_artifact/: tool.py  tool.yaml
